--- a/myapp/templates/carro1.html
+++ b/myapp/templates/carro1.html
@@ -19,14 +19,14 @@
         </div>
     </header>
 
-<h1>Medicamentos</h1>
+
 
 <div class="cartas">
-    <a href="#" class="carta" data-name="Actron" data-img-url="https://www.actro.es/sites/g/files/vrxlpx38101/files/2020-10/Actron_lateral_I.png">Actron</a>
-    <a href="#" class="carta" data-name="Amplex" data-img-url="https://www.laboratoriochile.cl/wp-content/uploads/2020/03/Amplex_10-160_30C_Teva_HD.jpg">Amplex</a>
-    <a href="#" class="carta" data-name="Doox" data-img-url="https://www.laboratoriochile.cl/wp-content/uploads/2015/11/Doox_5MG_30C_Teva_HD.jpg">Doox</a>
-    <a href="#" class="carta" data-name="Anfiol" data-img-url="https://static.salcobrandonline.cl/spree/products/50071/small/2830108_1.jpg?1641329812">Anfiol</a>
-    <a href="#" class="carta" data-name="Pertium" data-img-url="https://static.salcobrandonline.cl/spree/products/48280/small/573315.jpg?1641476702">Pertium</a>
+    <a href="#" class="carta" data-name="Actron" data-img-url="https://www.actro.es/sites/g/files/vrxlpx38101/files/2020-10/Actron_lateral_I.png"><img src="https://www.actro.es/sites/g/files/vrxlpx38101/files/2020-10/Actron_lateral_I.png" alt="">Actron</a>
+    <a href="#" class="carta" data-name="Amplex" data-img-url="https://www.laboratoriochile.cl/wp-content/uploads/2020/03/Amplex_10-160_30C_Teva_HD.jpg"><img src="https://www.laboratoriochile.cl/wp-content/uploads/2020/03/Amplex_10-160_30C_Teva_HD.jpg" alt="">Amplex</a>
+    <a href="#" class="carta" data-name="Doox" data-img-url="https://www.laboratoriochile.cl/wp-content/uploads/2015/11/Doox_5MG_30C_Teva_HD.jpg"><img src="https://www.laboratoriochile.cl/wp-content/uploads/2015/11/Doox_5MG_30C_Teva_HD.jpg" alt="">Doox</a>
+    <a href="#" class="carta" data-name="Anfiol" data-img-url="https://static.salcobrandonline.cl/spree/products/50071/small/2830108_1.jpg?1641329812"><img src="https://static.salcobrandonline.cl/spree/products/50071/small/2830108_1.jpg?1641329812" alt="">Anfiol</a>
+    <a href="#" class="carta" data-name="Pertium" data-img-url="https://static.salcobrandonline.cl/spree/products/48280/small/573315.jpg?1641476702"><img src="https://static.salcobrandonline.cl/spree/products/48280/small/573315.jpg?1641476702" alt="">Pertium</a>
 </div>
 
 <img id="carrito-icono" class="imagen_carro" src="https://img.icons8.com/?size=100&id=9720&format=png&color=000000" alt="Carro">
